--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'Cafe24Moyamoya-Face-v1.0';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_231029@1.1/Cafe24Moyamoya-Face-v1.0.woff2') format('woff2');
+    font-family: 'Cafe24Moyamoya-Regular-v1.0';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_231029@1.1/Cafe24Moyamoya-Regular-v1.0.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
@@ -10,48 +10,51 @@
     font-weight: normal;
     font-style: normal;
 }
+
 body, h1, h2, p {
     margin: 0;
 }
 
-/*사이트 제목*/
+/* 사이트 제목*/
 header {
-    background-color: #EDF2C2;
+    background-color: #edf2c2e3;
     width: 100%;
     height: 80px;
     display: flex;
     justify-content: center; /*가로 중앙 정렬*/
-    align-items: center;/*세로 중앙 정렬*/
+    align-items: center; /*세로 중앙 정렬*/
 
     position: fixed;
+    /*화면위에 고정시킬때 
+      z축을 기준으로 앞으로 더 나와있게한다
+      : 가장 앞쪽에 나온다
+      */
+    z-index: 100;
 }
 header h1 {
     color: #42731F;
-    font-family: 'Cafe24Moyamoya-Face-v1.0';
+    font-family: 'Cafe24Moyamoya-Regular-v1.0';
     font-size: 2.7em;
-    
 }
+
 
 /*전체 섹션에 대한 디자인*/
 section {
-   
-    height: 100vh;/*vh 단위는 브라우저창의 비율*/
+    height: 100vh; /* vh단위는 브라우저창의 비율*/
 }
 
-/* 섹션1에 대한 디자인*/
+/*섹션1에 대한 디자인*/
 .section1 {
     display: flex;
     align-items: start;
-    flex-direction: column; /*세로 정렬*/
+    flex-direction: column; /*세로정렬*/
     justify-content: center;
     background-image: url(img1.jpg);
-   background-size: cover;/*화면크기에 맞게 조절*/
-
-
+    background-size: cover; /*화면크기에 맞게 조절*/
 }
 .section1 h2, .section1 p {
     margin-left: 20px;
-    color: white;
+    color : white;
     text-shadow: black 1px 0 10px;
     font-family: 'Orbit-Regular';
     font-size: 1.8em;
@@ -59,22 +62,25 @@ section {
 .section1 p {
     font-size: 1.2em;
 }
+
 /* 섹션2 디자인 */
 .more {
-   display: block;/*전체 너비 가짐*/
-   text-align: end;/*너비가 커짐으로 이동가능*/
-   margin-top: 30px;
-   margin-left: 30px;
+    display: block; /*전체 너비 가짐*/
+    text-align: end; /*너비가 커짐으로 이동가능*/
+    margin-top: 30px;
+    margin-right: 30px;
 }
+
 .gallery {
     display: flex;
     justify-content: end;
 }
-.pic1, .pic2, .pic3 {
-    /*div태그는 공간을 확인하기 어려움으로 미리 지정*/
+.pic1, .pic2, .pic3,
+.text, .pic-box {
+    /*div태그는 공간을 확인하기어려움으로 미리지정*/
     width: 25vw; /*화면 너비사이즈 기준으로 비율*/
-    height: 80vh;/*화면 높이사이즈 기준으로 비율*/
-    background-color: grey;
+    height: 80vh; /*화면의 높이사이즈 기준으로 비율*/
+    background-color: gray;
     margin: 20px;
 
     border-radius: 20px;
@@ -83,27 +89,82 @@ section {
     justify-content: center;
     align-items: center;
     color: white;
-
 }
+
 /*이미지 넣는 공간*/
 .pic1 {
-    background-image:url(pic1.jpg);
+    background-image: url(pic1.jpg);
     background-size: cover;
-        
+    transition: all 0.5s;
+}
+.pic1:hover {
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.208);
+    transform: translate(-10px, -5px);
 }
 .pic2 {
-    background-image:url(pic2.jpg);
+    background-image: url(pic2.jpg);
     background-size: cover;
+    transition: all 0.5s;
+}
+.pic2:hover {
+    /* opacity는 태그 전체가 투명해진다
+       그 안에있는 자식도 투명*/
+    opacity: 0.7;
+    transform: translateY(-10px);
+}
+
+.pic-box {
+    position: relative;
+    /* div에서 자식이 부모다 클때, 
+    hidden을 쓰면 부모보다 큰 부분은 안보이게함*/
+    overflow: hidden;
+}
+.text , .pic3 { 
+    margin: 0;
+}
+.text {
+    z-index: 10;
+    /*색없음*/
+    background-color: transparent;
 }
 .pic3 {
-    background-image:url(pic3.jpg);
+    position: absolute;
+    left: 0;
+    top : 0;
+
+    background-image: url(pic3.jpg);
     background-size: cover;
-    background-position:center; 
+    background-position: center;
+
+    transition: all 0.5s;
 }
+/* pic3위에 text가 z-index로 올라가있기 때문에
+   pic-box위에 마우스를 올렸을때
+   pic3의 디자인을 바꾸는 css 선택자*/
+.pic-box:hover .pic3 {
+    filter: blur(5px);
+    transform: scale(1.05);
+}
+
 /*푸터 디자인*/
-footer  {
-    background-color:rgb(199, 192, 192);
+footer {
+    background-color: rgb(239, 239, 239);
     height: 60px;
     text-align: center;
     padding: 10px;
+}
+
+/*미디어쿼리를 이용해서 모바일 화면으로 제작*//*중단점*/
+@media (max-width: 768px) {
+    /*section2의 레이아웃을 수정*/
+    /*일렬로 나열되어 있는 pic 들을 세로로 정렬*/
+    /*gallery의 flex를 수정*/
+    .gallery {
+        flex-direction: column;
+    }
+    .pic1, .pic2, .pic3,
+.text, .pic-box {
+    width: 90vw;
+    height: 24vh;
+}
 }
